[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/level1/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Gingerbread-ExEW.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0.384314, 0.180392, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_colors/font_color = Color( 0.384314, 0.180392, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "DodgeBread!"
align = 1
autowrap = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Retry" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 176.0
margin_top = -152.0
margin_right = 319.0
margin_bottom = -110.0
text = "Retry"

[node name="NextLevel" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -352.0
margin_top = -152.0
margin_right = -100.0
margin_bottom = -110.0
text = "Next Level"

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
